--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -73,3 +73,66 @@ dataSources:
       eventHandlers:
         - event: FundingRateUpdated(int256,uint256)
           handler: handleFundingRateUpdated
+  
+  - kind: ethereum/contract
+    name: AmmDOTUSDC
+    network: xdai
+    source:
+      address: "0x6de775aaBEEedE8EFdB1a257198d56A3aC18C2FD"
+      abi: Amm
+      startBlock: 14090650
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/amm.ts
+      entities:
+        - FundingRateUpdated
+      abis:
+        - name: Amm
+          file: ./abis/Amm.json
+      eventHandlers:
+        - event: FundingRateUpdated(int256,uint256)
+          handler: handleFundingRateUpdated
+  
+  - kind: ethereum/contract
+    name: AmmYFIUSDC
+    network: xdai
+    source:
+      address: "0xd41025350582674144102B74B8248550580bb869"
+      abi: Amm
+      startBlock: 13746136
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/amm.ts
+      entities:
+        - FundingRateUpdated
+      abis:
+        - name: Amm
+          file: ./abis/Amm.json
+      eventHandlers:
+        - event: FundingRateUpdated(int256,uint256)
+          handler: handleFundingRateUpdated
+  
+  - kind: ethereum/contract
+    name: AmmSNXUSDC
+    network: xdai
+    source:
+      address: "0xb397389B61cbF3920d297b4ea1847996eb2ac8E8"
+      abi: Amm
+      startBlock: 14239284
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/amm.ts
+      entities:
+        - FundingRateUpdated
+      abis:
+        - name: Amm
+          file: ./abis/Amm.json
+      eventHandlers:
+        - event: FundingRateUpdated(int256,uint256)
+          handler: handleFundingRateUpdated
