fix: correct Amm entity name in manifest

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -45,7 +45,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/amm.ts
       entities:
-        - FundingRateUpdated
+        - FundingRateUpdatedEvent
       abis:
         - name: Amm
           file: ./abis/Amm.json
@@ -66,14 +66,14 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/amm.ts
       entities:
-        - FundingRateUpdated
+        - FundingRateUpdatedEvent
       abis:
         - name: Amm
           file: ./abis/Amm.json
       eventHandlers:
         - event: FundingRateUpdated(int256,uint256)
           handler: handleFundingRateUpdated
-  
+
   - kind: ethereum/contract
     name: AmmDOTUSDC
     network: xdai
@@ -87,14 +87,14 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/amm.ts
       entities:
-        - FundingRateUpdated
+        - FundingRateUpdatedEvent
       abis:
         - name: Amm
           file: ./abis/Amm.json
       eventHandlers:
         - event: FundingRateUpdated(int256,uint256)
           handler: handleFundingRateUpdated
-  
+
   - kind: ethereum/contract
     name: AmmYFIUSDC
     network: xdai
@@ -108,14 +108,14 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/amm.ts
       entities:
-        - FundingRateUpdated
+        - FundingRateUpdatedEvent
       abis:
         - name: Amm
           file: ./abis/Amm.json
       eventHandlers:
         - event: FundingRateUpdated(int256,uint256)
           handler: handleFundingRateUpdated
-  
+
   - kind: ethereum/contract
     name: AmmSNXUSDC
     network: xdai
@@ -129,7 +129,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/amm.ts
       entities:
-        - FundingRateUpdated
+        - FundingRateUpdatedEvent
       abis:
         - name: Amm
           file: ./abis/Amm.json
