--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -421,7 +421,7 @@ dataSources:
     name: ReferrerContract
     network: mainnet
     source:
-      address: "0x7019BAF75A3bc2233f34aF3E9B42F0Bc3Ceb1285"
+      address: "0x60537eE7156820C95665B68DA21C5DE1D6eC6181"
       abi: PerpetualProtocolReferrer
     mapping:
       kind: ethereum/events
@@ -430,7 +430,7 @@ dataSources:
       file: ./src/mappings/referrer.ts
       entities:
         - ReferralCode
-        - Referrer
+        - Trader
       abis:
         - name: PerpetualProtocolReferrer
           file: ./abis/PerpetualProtocolReferrer.json
